prob 2 - joining my datasets

--- a/p8105_hw3_leb2236.Rmd
+++ b/p8105_hw3_leb2236.Rmd
@@ -75,7 +75,7 @@ participants_clean = participants %>%
 Next, I am joining my two datasets. 
 
 ```{r}
-
+accel_df = left_join(participants_clean, accelerometer, by = 'seqn')
 ```
 
 
