--- a/p8105_hw3_leb2236.md
+++ b/p8105_hw3_leb2236.md
@@ -87,3 +87,7 @@ participants_clean = participants %>%
 ```
 
 Next, I am joining my two datasets.
+
+``` r
+accel_df = left_join(participants_clean, accelerometer, by = 'seqn')
+```
