--- a/p8105_hw3_leb2236.md
+++ b/p8105_hw3_leb2236.md
@@ -48,6 +48,23 @@ data("ny_noaa")
 
 ## Problem 2
 
+## Delete this code
+
+``` r
+part_testing = read_csv(file = "./data/nhanes_covar.csv")
+```
+
+    ## New names:
+    ## Rows: 254 Columns: 5
+    ## ── Column specification
+    ## ──────────────────────────────────────────────────────── Delimiter: "," chr
+    ## (5): ...1, 1 = male, ...3, ...4, 1 = Less than high school
+    ## ℹ Use `spec()` to retrieve the full column specification for this data. ℹ
+    ## Specify the column types or set `show_col_types = FALSE` to quiet this message.
+    ## • `` -> `...1`
+    ## • `` -> `...3`
+    ## • `` -> `...4`
+
 First, the below code is used to load and tidy the datasets related to
 accelerometers and the participants.
 
@@ -91,3 +108,59 @@ Next, I am joining my two datasets.
 ``` r
 accel_df = left_join(participants_clean, accelerometer, by = 'seqn')
 ```
+
+Next I am creating a table for the number of men and women in each
+education category.
+
+``` r
+accel_df %>%
+  mutate(
+    sex = recode(sex, `1` = "Male", `2` = "Female"),
+    education = recode(education, 
+                       `1` = "Less than High School", 
+                       `2` = "High School Equivalent", 
+                       `3` = "More than High School")
+    )%>%
+group_by(education, sex) %>%
+  summarize(count_sex = n()) %>%
+  pivot_wider(
+    names_from = education,
+    values_from = count_sex
+  )%>%
+knitr::kable()
+```
+
+    ## `summarise()` has grouped output by 'education'. You can override using the
+    ## `.groups` argument.
+
+| sex    | High School Equivalent | More than High School | Less than High School |
+|:-------|-----------------------:|----------------------:|----------------------:|
+| Male   |                     35 |                    56 |                    27 |
+| Female |                     23 |                    59 |                    28 |
+
+``` r
+accel_df %>%
+  mutate(
+    sex = recode(sex, `1` = "Male", `2` = "Female"),
+    education = recode(education, 
+                       `1` = "Less than High School", 
+                       `2` = "High School Equivalent", 
+                       `3` = "More than High School")
+    )%>%
+group_by(education, sex) %>%
+  summarize(count_education = n()) %>%
+  pivot_wider(
+    names_from = sex,
+    values_from = count_education
+  )%>%
+knitr::kable()
+```
+
+    ## `summarise()` has grouped output by 'education'. You can override using the
+    ## `.groups` argument.
+
+| education              | Male | Female |
+|:-----------------------|-----:|-------:|
+| High School Equivalent |   35 |     23 |
+| More than High School  |   56 |     59 |
+| Less than High School  |   27 |     28 |
