--- a/p8105_hw3_leb2236.md
+++ b/p8105_hw3_leb2236.md
@@ -48,23 +48,6 @@ data("ny_noaa")
 
 ## Problem 2
 
-## Delete this code
-
-``` r
-part_testing = read_csv(file = "./data/nhanes_covar.csv")
-```
-
-    ## New names:
-    ## Rows: 254 Columns: 5
-    ## ── Column specification
-    ## ──────────────────────────────────────────────────────── Delimiter: "," chr
-    ## (5): ...1, 1 = male, ...3, ...4, 1 = Less than high school
-    ## ℹ Use `spec()` to retrieve the full column specification for this data. ℹ
-    ## Specify the column types or set `show_col_types = FALSE` to quiet this message.
-    ## • `` -> `...1`
-    ## • `` -> `...3`
-    ## • `` -> `...4`
-
 First, the below code is used to load and tidy the datasets related to
 accelerometers and the participants.
 
@@ -122,32 +105,6 @@ accel_df %>%
                        `3` = "More than High School")
     )%>%
 group_by(education, sex) %>%
-  summarize(count_sex = n()) %>%
-  pivot_wider(
-    names_from = education,
-    values_from = count_sex
-  )%>%
-knitr::kable()
-```
-
-    ## `summarise()` has grouped output by 'education'. You can override using the
-    ## `.groups` argument.
-
-| sex    | High School Equivalent | More than High School | Less than High School |
-|:-------|-----------------------:|----------------------:|----------------------:|
-| Male   |                     35 |                    56 |                    27 |
-| Female |                     23 |                    59 |                    28 |
-
-``` r
-accel_df %>%
-  mutate(
-    sex = recode(sex, `1` = "Male", `2` = "Female"),
-    education = recode(education, 
-                       `1` = "Less than High School", 
-                       `2` = "High School Equivalent", 
-                       `3` = "More than High School")
-    )%>%
-group_by(education, sex) %>%
   summarize(count_education = n()) %>%
   pivot_wider(
     names_from = sex,
@@ -164,3 +121,37 @@ knitr::kable()
 | High School Equivalent |   35 |     23 |
 | More than High School  |   56 |     59 |
 | Less than High School  |   27 |     28 |
+
+``` r
+accel_df %>%
+  ggplot(aes(x = education, y = age, fill = sex))+
+  geom_boxplot()+
+  labs(title = "Age Distribution of Men and Women by Education Category",
+       x = "Education Category",
+       y = "Age")
+```
+
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+
+INSERT COMMENTS ON THE TABLE AND PLOT ABOVE HERE
+
+Next I am aggregating and plotting total activity.
+
+``` r
+accel_df = accel_df %>%
+  mutate(total_act = rowSums(select(., min1:min1440), na.rm = TRUE))
+
+accel_df%>%
+  ggplot(aes(x = age, y = total_act, color = sex)) +
+    geom_point() +  
+    geom_smooth(method = "lm", se = FALSE) +
+    facet_wrap(~ education) + 
+    labs(title = "Total Activity by Age and Education Level",
+         x = "Age",
+         y = "Total Activity",
+         color = "Sex")
+```
+
+    ## `geom_smooth()` using formula = 'y ~ x'
+
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
