importing and cleaning data for problem 3

--- a/p8105_hw3_leb2236.md
+++ b/p8105_hw3_leb2236.md
@@ -184,3 +184,32 @@ accel_df_long %>%
     ## `geom_smooth()` using method = 'gam' and formula = 'y ~ s(x, bs = "cs")'
 
 <img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
+
+## Problem 3: Citi Biking
+
+First, I am going to load in my four data files.
+
+``` r
+jan_2020 = read_csv(file="./data/Jan 2020 Citi.csv", show_col_types = FALSE) %>%
+  janitor::clean_names()
+
+jan_2024 = read_csv(file="./data/Jan 2024 Citi.csv", show_col_types = FALSE)%>%
+  janitor::clean_names()
+
+july_2020 = read_csv(file="./data/July 2020 Citi.csv", show_col_types = FALSE)%>%
+  janitor::clean_names()
+
+july_2024 = read_csv(file="./data/July 2024 Citi.csv", show_col_types = FALSE)%>%
+  janitor::clean_names()
+```
+
+Then I am going to check the variable types for each file before
+merging. I am hiding the results because they are lengthy, but all
+variable types match across the datasets.
+
+``` r
+str(jan_2020)
+str(jan_2024)
+str(july_2020)
+str(july_2024)
+```
