--- a/p8105_hw3_leb2236.Rmd
+++ b/p8105_hw3_leb2236.Rmd
@@ -151,3 +151,30 @@ accel_df_long %>%
        color = "Sex")
 ```
 
+## Problem 3: Citi Biking
+
+First, I am going to load in my four data files.
+
+```{r}
+jan_2020 = read_csv(file="./data/Jan 2020 Citi.csv", show_col_types = FALSE) %>%
+  janitor::clean_names()
+
+jan_2024 = read_csv(file="./data/Jan 2024 Citi.csv", show_col_types = FALSE)%>%
+  janitor::clean_names()
+
+july_2020 = read_csv(file="./data/July 2020 Citi.csv", show_col_types = FALSE)%>%
+  janitor::clean_names()
+
+july_2024 = read_csv(file="./data/July 2024 Citi.csv", show_col_types = FALSE)%>%
+  janitor::clean_names()
+```
+
+Then I am going to check the variable types for each file before merging. I am hiding the results because they are lengthy, but all variable types match across the datasets.
+
+```{r results = 'hide'}
+str(jan_2020)
+str(jan_2024)
+str(july_2020)
+str(july_2024)
+```
+
