--- a/p8105_hw3_leb2236.md
+++ b/p8105_hw3_leb2236.md
@@ -263,3 +263,29 @@ citi_df%>%
 | January 2024 |         2108 |            16753 |
 | July 2020    |         5637 |            15411 |
 | July 2024    |        10894 |            36262 |
+
+INSERT COMMENTS HERE ON THE TABLE ABOVE
+
+Next, I am making a table showing the 5 most popular starting stations
+for July 2024, inclusive of the number of rides originating from these
+stations.
+
+``` r
+july_2024 %>%
+  group_by(start_station_name)%>%
+  summarize(
+    start_count=n()
+  )%>%
+  arrange(desc(start_count))%>%
+  head(5)%>%
+  rename('Starting Station' = start_station_name, 'Number of Rides' = start_count)%>%
+  knitr::kable()
+```
+
+| Starting Station         | Number of Rides |
+|:-------------------------|----------------:|
+| Pier 61 at Chelsea Piers |             163 |
+| University Pl & E 14 St  |             155 |
+| W 21 St & 6 Ave          |             152 |
+| West St & Chambers St    |             150 |
+| W 31 St & 7 Ave          |             146 |
