finishing problem 1 and cleaning up comments

--- a/p8105_hw3_leb2236.md
+++ b/p8105_hw3_leb2236.md
@@ -46,8 +46,113 @@ scale_fill_discrete = scale_fill_viridis_d
 ## Problem 1
 
 ``` r
+#loading the dataset 
+
 data("ny_noaa")
 ```
+
+The ‘ny_noaa’ dataset contains 2595176 rows and 7 columns in total. The
+columns are Weather Station ID, Date, and then columns for the five core
+variables for New York’s weather stations: Precipitation, Snowfall, Snow
+Depth, Maximum Temperature, and Minimum Temperature. From looking at the
+data, it appears like missing data is significant.
+
+Next, we will tidy and clean the data.
+
+``` r
+# cleaning and tidying the data
+
+ny_noaa %>% 
+  count(snow) %>%
+  arrange(desc(n))
+```
+
+    ## # A tibble: 282 × 2
+    ##     snow       n
+    ##    <int>   <int>
+    ##  1     0 2008508
+    ##  2    NA  381221
+    ##  3    25   31022
+    ##  4    13   23095
+    ##  5    51   18274
+    ##  6    76   10173
+    ##  7     8    9962
+    ##  8     5    9748
+    ##  9    38    9197
+    ## 10     3    8790
+    ## # ℹ 272 more rows
+
+``` r
+ny_noaa = 
+  ny_noaa %>% 
+  separate(date, into = c("year", "month", "day"), convert = TRUE) %>% 
+  mutate(
+    tmax = as.numeric(tmax),
+    tmin = as.numeric(tmin))
+```
+
+The most commonly observed value for Snowfall is 0, since New York does
+not get snow year round.
+
+Next, we are creating a two-panel plot showing the average max
+temperature in January and in July in each station across years.
+
+``` r
+# creating plots for the average max temp in January/July
+
+ny_noaa %>% 
+  group_by(id, year, month) %>% 
+  filter(month %in% c(1, 7)) %>% 
+  summarize(mean_tmax = mean(tmax, na.rm = TRUE, color = id)) %>% 
+  ggplot(aes(x = year, y = mean_tmax, group = id)) + geom_point() + geom_path() +
+  facet_grid(~month) +
+  labs(title = "Mean monthly temperature for each station across years")
+```
+
+    ## `summarise()` has grouped output by 'id', 'year'. You can override using the
+    ## `.groups` argument.
+
+    ## Warning: Removed 5970 rows containing missing values or values outside the scale range
+    ## (`geom_point()`).
+
+    ## Warning: Removed 5931 rows containing missing values or values outside the scale range
+    ## (`geom_path()`).
+
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-2-1.png" width="90%" />
+
+The plot clearly demonstrates that the average maximum temperature for
+all stations is much higher in July compared to January. There appears
+to be a loose structure, where peaks in average maximum temperature are
+occurring many for weather stations at the same time. There are a few
+outliers. The most drastic is in July of the late 1980s, when one
+weather station experienced a max temp significantly lower than all
+other weather stations.
+
+Lastly, we are making a two-panel plot showing tmax vs tmin for the full
+‘ny_noaa’ dataset and then a plot showing the distribution of snowfall
+values greater than 0 and less than 100 separately by year.
+
+``` r
+hex = 
+  ny_noaa %>% 
+  ggplot(aes(x = tmin, y = tmax)) + 
+  geom_hex()
+
+ridge = 
+  ny_noaa %>% 
+  filter(snow < 100, snow > 0) %>%
+  ggplot(aes(x = snow, y = as.factor(year))) + 
+  geom_density_ridges()
+
+hex+ridge
+```
+
+    ## Warning: Removed 1136276 rows containing non-finite outside the scale range
+    ## (`stat_binhex()`).
+
+    ## Picking joint bandwidth of 3.76
+
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
 
 ## Problem 2
 
@@ -170,7 +275,7 @@ accel_df %>%
        y = "Age")
 ```
 
-<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-4-1.png" width="90%" />
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-7-1.png" width="90%" />
 
 From the box plots, we can further analyze the distribution of age for
 each gender within each education category. The distribution of age is
@@ -213,7 +318,7 @@ accel_df%>%
 
     ## `geom_smooth()` using method = 'loess' and formula = 'y ~ x'
 
-<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-8-1.png" width="90%" />
 
 From the graph above, it appears that for both the ‘high school
 equivalent’ and ‘more than high school’ education categories, women
@@ -276,7 +381,7 @@ accel_df_long %>%
 
     ## `geom_smooth()` using method = 'gam' and formula = 'y ~ s(x, bs = "cs")'
 
-<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-6-1.png" width="90%" />
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-9-1.png" width="90%" />
 
 From the plot above, it appears that for participants in all education
 categories, the average activity level is generally low early in the
@@ -448,7 +553,7 @@ citi_df %>%
     ## `summarise()` has grouped output by 'weekdays', 'month'. You can override using
     ## the `.groups` argument.
 
-<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-12-1.png" width="90%" />
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-15-1.png" width="90%" />
 
 This plot demonstrates that on all days of the week and in both 2020 and
 2024, ridership was higher in July compared to January. The average
@@ -485,7 +590,7 @@ citi_df %>%
     ## Warning: Removed 1199 rows containing non-finite outside the scale range
     ## (`stat_boxplot()`).
 
-<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-13-1.png" width="90%" />
+<img src="p8105_hw3_leb2236_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" />
 
 From this figure, we can see that in both January and July 2024, the
 average ride duration for members was lower comparative to casual
@@ -493,6 +598,6 @@ riders. There does not appear to be a large difference in the
 distribution of ride duration when comparing classic bikes to electric
 bikes. The distribution of ride duration for casual riders appears to be
 more spread out compared to members. Also, its important to note that
-the y-axes on this figure were limited to make the figure more
-reasonable, however there were data points that appear beyond the scale
+the y-axes on this figure were limited to make the figure easier to
+interpret, however there were data points that appear beyond the scale
 of the plots.
