--- a/p8105_hw3_leb2236.Rmd
+++ b/p8105_hw3_leb2236.Rmd
@@ -33,7 +33,61 @@ scale_fill_discrete = scale_fill_viridis_d
 ## Problem 1
 
 ```{r loading dataset}
+#loading the dataset 
+
 data("ny_noaa")
+```
+
+The 'ny_noaa' dataset contains `r nrow(ny_noaa)` rows and `r ncol(ny_noaa)` columns in total. The columns are Weather Station ID, Date, and then columns for the five core variables for New York's weather stations: Precipitation, Snowfall, Snow Depth, Maximum Temperature, and Minimum Temperature. From looking at the data, it appears like missing data is significant.
+
+Next, we will tidy and clean the data. 
+```{r}
+# cleaning and tidying the data
+
+ny_noaa %>% 
+  count(snow) %>%
+  arrange(desc(n))
+
+ny_noaa = 
+  ny_noaa %>% 
+  separate(date, into = c("year", "month", "day"), convert = TRUE) %>% 
+  mutate(
+    tmax = as.numeric(tmax),
+    tmin = as.numeric(tmin))
+```
+The most commonly observed value for Snowfall is 0, since New York does not get snow year round. 
+
+Next, we are creating a two-panel plot showing the average max temperature in January and in July in each station across years.
+
+```{r}
+# creating plots for the average max temp in January/July
+
+ny_noaa %>% 
+  group_by(id, year, month) %>% 
+  filter(month %in% c(1, 7)) %>% 
+  summarize(mean_tmax = mean(tmax, na.rm = TRUE, color = id)) %>% 
+  ggplot(aes(x = year, y = mean_tmax, group = id)) + geom_point() + geom_path() +
+  facet_grid(~month) +
+  labs(title = "Mean monthly temperature for each station across years")
+```
+
+The plot clearly demonstrates that the average maximum temperature for all stations is much higher in July compared to January. There appears to be a loose structure, where peaks in average maximum temperature are occurring many for weather stations at the same time. There are a few outliers. The most drastic is in July of the late 1980s, when one weather station experienced a max temp significantly lower than all other weather stations.
+
+Lastly, we are making a two-panel plot showing tmax vs tmin for the full 'ny_noaa' dataset and then a plot showing the distribution of snowfall values greater than 0 and less than 100 separately by year.
+
+```{r}
+hex = 
+  ny_noaa %>% 
+  ggplot(aes(x = tmin, y = tmax)) + 
+  geom_hex()
+
+ridge = 
+  ny_noaa %>% 
+  filter(snow < 100, snow > 0) %>%
+  ggplot(aes(x = snow, y = as.factor(year))) + 
+  geom_density_ridges()
+
+hex+ridge
 ```
 
 ## Problem 2
@@ -377,5 +431,5 @@ citi_df %>%
   )
 ```
 
-From this figure, we can see that in both January and July 2024, the average ride duration for members was lower comparative to casual riders. There does not appear to be a large difference in the distribution of ride duration when comparing classic bikes to electric bikes. The distribution of ride duration for casual riders appears to be more spread out compared to members. Also, its important to note that the y-axes on this figure were limited to make the figure more reasonable, however there were data points that appear beyond the scale of the plots. 
+From this figure, we can see that in both January and July 2024, the average ride duration for members was lower comparative to casual riders. There does not appear to be a large difference in the distribution of ride duration when comparing classic bikes to electric bikes. The distribution of ride duration for casual riders appears to be more spread out compared to members. Also, its important to note that the y-axes on this figure were limited to make the figure easier to interpret, however there were data points that appear beyond the scale of the plots. 
 
